<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/colors" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Paragraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/colors_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            style="@style/Paragraph"
            android:text="@string/color_alpha" />

        <View
            android:layout_width="match_parent"
            android:background="@drawable/shape_color_alpha"
            android:layout_height="30dp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            style="@style/Paragraph"
            android:text="@string/color_red" />

        <View
            android:layout_width="match_parent"
            android:background="@drawable/shape_color_red"
            android:layout_height="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            style="@style/Paragraph"
            android:text="@string/color_green" />


        <View
            android:layout_width="match_parent"
            android:background="@drawable/shape_color_green"
            android:layout_height="30dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            style="@style/Paragraph"
            android:text="@string/color_blue" />

        <View
            android:layout_width="match_parent"
            android:background="@drawable/shape_color_blue"
            android:layout_height="30dp" />

    </LinearLayout>

</LinearLayout>