<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <cc.fastcv.view.customize.drawSpell.custom.DrawSpellView
        android:id="@+id/dsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/ll_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:behavior_peekHeight="50dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/holo_red_light"
            android:gravity="center"
            android:text="@string/up_pull_config"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="450dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#857878"
                android:padding="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_reset"
                    android:text="@string/reset_ui" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        style="@style/Title"
                        android:text="@string/set_canvas_color" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_color" />

                </LinearLayout>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:id="@+id/sb_color"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    style="@style/Title"
                    android:text="@string/config_paint" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rg_shader"
                    android:orientation="vertical">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linear_gradient"
                        android:checked="true"
                        android:id="@+id/rb_linear" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radial_gradient"
                        android:id="@+id/rb_radial" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sweep_gradient"
                        android:id="@+id/rb_sweep" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bitmap"
                        android:id="@+id/rb_Bitmap" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/compose_shader"
                        android:id="@+id/rb_compose" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    style="@style/Title"
                    android:text="@string/tile_mode" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rg_tile_mode"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clamp"
                        android:checked="true"
                        android:id="@+id/rb_clamp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/mirror"
                        android:id="@+id/rb_mirror" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/repeat"
                        android:id="@+id/rb_repeat" />

                </RadioGroup>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    style="@style/Title"
                    android:text="@string/bitmap_select" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:foreground="@drawable/shape_bitmap_selected_bg"
                        android:src="@drawable/ic_spell"
                        tools:targetApi="m"
                        android:id="@+id/iv_16"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_spell"
                        tools:targetApi="m"
                        android:id="@+id/iv_32"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_spell"
                        tools:targetApi="m"
                        android:id="@+id/iv_64"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <ImageView
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_spell"
                        tools:targetApi="m"
                        android:id="@+id/iv_128"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    style="@style/Title"
                    android:text="@string/compose_bitmap" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rg_compose_shader"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linear_gradient"
                        android:checked="true"
                        android:id="@+id/rb_compose_linear" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radial_gradient"
                        android:id="@+id/rb_compose_radial" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sweep_gradient"
                        android:id="@+id/rb_compose_sweep" />
                </RadioGroup>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>