<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coordinate_system" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Paragraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coordinate_system_desc" />

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_content_bg"
        android:padding="15dp">

        <cc.fastcv.view.customize.theoreticalBasis.custom.ClickShowView
            android:id="@+id/csv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#42B36A" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/position_in_screen" />

        <TextView
            android:id="@+id/tv_position_in_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/position_in_view" />

        <TextView
            android:id="@+id/tv_position_in_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</LinearLayout>