<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/deg_and_rad" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Paragraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deg_and_rad_desc" />

    <cc.fastcv.view.customize.theoreticalBasis.custom.AngleCalcView
        android:layout_width="230dp"
        android:id="@+id/angle_calc"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Paragraph"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deg_value" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Paragraph"
            android:gravity="center"
            android:id="@+id/tv_angle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0°" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Paragraph"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rag_value" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Paragraph"
            android:gravity="center"
            android:id="@+id/tv_rag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0" />

    </LinearLayout>

</LinearLayout>